nlamah/src/main/resources/org/nlamah/QBase/QL/test/error/doubleDeclaration1.ql
form test
{
	question1 boolean "test1"
	question1 boolean "test2"
}